# modern-terminal

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  justfile
examples/: color_palette.rs  render.sh  render_color_palette.rs  table.rs  text.rs
src/: color.rs  color_codes.rs  color_systems.rs  color_triplet.rs  console.rs  lib.rs  palette.rs  rgb.rs  style.rs  text.rs
src/base/: console.rs  mod.rs  render.rs  segment.rs  style.rs
src/base/color/: codes.rs  mod.rs  model.rs  storage.rs
src/components/: color_palette.rs  mod.rs  table.rs  text.rs
src/core/: console.rs  mod.rs  render.rs  segment.rs  style.rs
src/core/color/: mod.rs  model.rs
