[dependencies]
  libc = "0.2"
  regex = "1"
  textwrap = "0.14"

[package]
  authors = ["Kevin Amado <kamadorueda@gmail.com>"]
  description = "Library for rich text and beautiful formatting in the terminal"
  documentation = "https://docs.rs/modern-terminal"
  edition = "2018"
  license = "MIT"
  name = "modern-terminal"
  publish = false
  repository = "https://github.com/kamadorueda/modern-terminal"
  version = "0.7.0"
